fix: remove overflow: hidden

--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ body {
     font-family: lexend;
 
     animation: fade-in ease 500ms;
-    overflow: hidden;
 }
 
 .center {
@@ -144,12 +143,7 @@ a {
 
 #totally-real-app-mount-react-native-winjs-why-do-people-even-do-this.hidden { opacity: 0 }
 
-#wait-for-input {
-    position: absolute;
-    opacity: 1;
-    width: 100vw;
-    height: 100vh;
-}
+#wait-for-input { opacity: 1 }
 
 .avatar {
     border-radius: 100%;
